src/render/tests/snapshots/diagnostic_render__render__tests__ending__1.snap
---
source: src/render/tests/ending.rs
expression: result
---
error: Some message
 --> test_file.test:1:1
1 |   let main = 23;
  |  _^
2 | | something += 3.0;
  | |____^ something

